--- a/package.json
+++ b/package.json
@@ -3,12 +3,19 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
     "viem": "^2.9.31"
+  },
+  "devDependencies": {
+    "@types/node": "^20.12.8"
   }
 }
